syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package resources_api;

service Resources {
  rpc GetResourcesMetadata (GetResourcesMetadataRequest) returns (GetResourcesMetadataResponse);
  rpc GetResourceMetadata (GetResourceMetadataRequest) returns (GetResourceMetadataResponse);
}

message ResourceMetadata {
  string id = 1;
  string resource_type = 2;
  string resource_name = 3;
  google.protobuf.Timestamp updated_date = 4;
  google.protobuf.Timestamp created_date = 5;
}

message GetResourcesMetadataRequest {
	int32 page_number = 1;
	int32 page_size = 2;
}

message GetResourceMetadataRequest {
  string id = 1;
}

message GetResourceMetadataResponse {
  ResourceMetadata resource_metadata = 1;
}

message GetResourcesMetadataResponse {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 total_count = 3;
  repeated ResourceMetadata resources_metadata = 4;
}


