syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package users_api;

service Users {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
  rpc CheckUserCredentials(CredentialsRequest) returns  (CredentialsResponse);
}

message GetUsersRequest {
	int32 page_number = 1;
	int32 page_size = 2;
}

message GetUsersResponse {
	int32 current_page = 1;
	int32 page_size = 2;
	int32 total_count = 3;
	repeated User users = 4;
}

message GetUserRequest {
	string id = 1;
}

message GetUserResponse {
	User user = 1;
}

message CreateUserRequest {
	User user = 1;
	string password = 2;
}

message CreateUserResponse {
	User user = 1;
}

message UpdateUserRequest {
	User user = 1;
}

message UpdateUserResponse {
	User user = 1;
}

message DeleteUserRequest {
	string id = 1;
}

message CredentialsRequest {
	string user_name = 1;
	string password = 2;
}

message CredentialsResponse {
	bool is_valid = 1;
	User user = 2;
}

message User {
	string id = 1;
	string user_name = 2;
	string name = 3;
	repeated string roles = 4;
	google.protobuf.Timestamp updated_date = 5;
	google.protobuf.Timestamp created_date = 6;
}